k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: quote-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-api-server 
  namespace: quote-ns 
spec:
   replicas: 3 
   selector:
     matchLabels:
         app: quote-api 
   template:
      metadata:
         labels:
            app:  quote-api
      spec:
        containers:
          - name: quote-api 
            image: us-docker.pkg.dev/gkem-api-new/quote-repo/quote-api 
            ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service 
metadata:
    name: quote-api-svc 
    namespace: quote-ns 
spec:
  type: LoadBalancer
  selector:
    app: quote-api 
  ports:
  - port: 80
    targetPort: 8080
    name: http-web
