k8s/service.yaml
apiVersion: v1
kind: Service 
metadata:
    name: quote-api-svc-stable
    namespace: quote-ns 
spec:
  type: LoadBalancer
  selector:
    app: quote-api 
  ports:
  - port: 80
    targetPort: 8080
    name: http-web
---
apiVersion: v1
kind: Service 
metadata:
    name: quote-api-svc-canary
    namespace: quote-ns 
spec:
  type: LoadBalancer
  selector:
    app: quote-api 
  ports:
  - port: 80
    targetPort: 8080
    name: http-web
